test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-remove-list-element/02-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-data-sync-remove-list-element-ns
