test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-remove-list-element/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-data-sync-remove-list-element-ns
