test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-remove-list-element/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-netpol
  namespace: cpol-data-sync-remove-list-element-ns
spec:
  policyTypes:
  - Ingress
  - Egress
