test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-remove-list-element/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-sync-remove-list-element-cpol
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
