test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-remove-list-element/04-update-cpol.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: update-cpol
spec:
  timeouts: {}
  try:
  - apply:
      file: policy-remove-egress.yaml
  - assert:
      file: policy-ready.yaml
