test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-remove-list-element/06-checks.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: checks
spec:
  timeouts: {}
  try:
  - assert:
      file: netpol-new.yaml
  - error:
      file: netpol.yaml
