test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-sync-remove-list-element/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-data-sync-remove-list-element
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-data-sync-remove-list-element-cpol
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
  - name: step-03
    try:
    - assert:
        file: netpol.yaml
  - name: step-04
    try:
    - apply:
        file: policy-remove-egress.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-data-sync-remove-list-element-cpol
  - name: step-05
    try:
    - sleep:
        duration: 3s
  - name: step-06
    try:
    - assert:
        file: netpol-new.yaml
    - error:
        file: netpol.yaml
